커맨드 aliases 추가 + TabComplete 수정